--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SpongeBobia</title>
-    <link rel="stylesheet" href="css/reset.css">
+    <title>It's GifTastic! Boogie Woogie Woogie</title>
+    <link href="https://fonts.googleapis.com/css?family=Liu+Jian+Mao+Cao&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-   <header>
-        <img id="title-image" class="header" src="https://vignette4.wikia.nocookie.net/spongebob/images/2/2e/ESB-big.png/revision/latest?cb=20140525180940">    
-   </header> 
 
-    <div id=button-div></div>
+    <div id="dangerZone"></div>
 
-    <button id="search-button">Search</button>
-    <input id="search-bar" placeholder="Search..">
 
-    <div id=gif-dump></div>
-    <div id="favs"></div>
+    <form id="lookHere">
+        <label for="gifInput">Let's the GIFs begin!</label>
+        <input type="text" id="gifInput"><br>
+
+
+        <input id="startOver" type="reset" value="Submit">
+    </form>
+
+
+    <div id="gifTiles"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src=app.js></script>
+    <script src="javascript/javascript.js"></script>
+
 </body>
+
 </html>
